2003-10-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/index.html: 
	* site/index.html: Add Macos X 2.0.1 package.

2003-10-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html:
	* site/old-news.html: 
	* site/download/index.html: Run indent-region, html tag fixes.
	Add 2.0.1 Cygwin download.

2003-09-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Add note about broken DOS/Windows
	command line.

2003-09-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/download/windows.html: rewrite 

	* GNUmakefile (upload): call chgrp.

2003-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html: Add downloadable link to
	example-1.ly and instruction to double click.

2003-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html (cygwin): Add note about autogen.sh.

2003-09-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/automated-engraving/big-page.py: collate pages,
	revise links.

	* GNUmakefile (scripts): add

2003-09-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/index.html: Update Cygwin info.

	* site/devel/packaging.html: Update Cygwin native and cross
	packaging instructions.

2003-09-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/images/ : add examples PNG in v2 syntax

2003-08-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/index.html: add magical "notation" word.

	* site/about/automated-engraving/benchmarking.html: add note about
	missing notes.

2003-08-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Add pfaedit urls.

	* site/download/index.html: Update.

2003-08-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* GNUmakefile (upload): commit automatically on upload.

2003-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/automated-engraving/index.html: spice up toc.

	* site/download/index.html (href): add slackware download.

2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/index.html (href): add planetccrma news.
