@@ -59,8 +59,8 @@ a fragment of both pieces:
 <p>
 
 The location of the bar lines is a giveaway.  In the Henle edition,
-both barlines are on exactly the same horizontal location. In all note
-heads are also on the exact same horizontal location.  When you look
+both barlines are on exactly the same horizontal location. Also, the
+note heads are on the exact same horizontal location.  When you look
 back at the whole page, you can easily verify that almost all barlines
 are in the same location, as are most of the note heads. The entire
 thing is spaced as if it were put to a big grid, which is what causes
