@@ -9,7 +9,25 @@
     <td>
       
       <dl>
+	<dt>September 29, 2003</dt>
+	<dd> LilyPond 2.0.1 is released. It
+	  contains minor bugfixes.
+	  See the
+	  <a href="http://lilypond.org/doc/v2.0/Documentation/out-www/ChangeLog.txt">
+	    ChangeLog</a>
+	  or download <a href="download/#2.0">here</a> directly.
+	</dd>
 
+	<dt>September 27, 2003</dt>
+	<dd>
+	  PlanetCCRMA has been updated to include LilyPond 2.0. Go
+	  
+	  <a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
+	    here</a> to download.  Thanks to Fernando Pablo
+	  Lopez-Lezcano!
+	</dd>
+
+	
 	<dt>September 24, 2003 </dt>
 	<dd> LilyPond 2.0.0 is released. The
 	  focus of this release is cleanups of the syntax: entering music is
