@@ -14,8 +14,6 @@ LilyPond&rdquo;</h1>
 
 <p>
 
-<! te kort ... mag wat langer.>
-
 Scores made with computers almost always look bland and uninspiring,
 but for what reason?  Machines may be mechanical, but why should their
 products be?  With that thought in mind we started programming seven
