@@ -35,21 +35,21 @@ classical music is no problem. Simple solo-pieces are set in a breeze,
 
 <p align=center>
 
-<a href=http://lilypond.org/doc/v1.8/input/mutopia/J.S.Bach/out-www/baerenreiter-sarabande.pdf>
+<a href=http://lilypond.org/doc/v2.0/input/mutopia/J.S.Bach/out-www/baerenreiter-sarabande.pdf>
 <img src=@IMAGES@sarabande.png></a>
 <p align=center><em>(Click for a PDF file)</em> 
 <p>
 and with a little work,  complex  pieces are also possible
 <p align=center>
-<a href=http://lilypond.org/doc/v1.8/input/out-www/les-nereides.pdf>
+<a href=http://lilypond.org/doc/v2.0/input/out-www/les-nereides.pdf>
 <img src=@IMAGES@les-nereides.png> </a>
 <p align=center><em>(Click for a PDF file)</em>
 
 <p>
 More samples of the latest LilyPond versions are included in the
 documentation pages. There are separate pages for the <a
-href=http://lilypond.org/doc/v1.8/examples.html>stable</a> and for the
-<a href=http://lilypond.org/doc/v1.8/examples.html>development</a>
+href=http://lilypond.org/doc/v2.0/examples.html>stable</a> and for the
+<a href=http://lilypond.org/doc/v2.1/examples.html>development</a>
 release.
 
 
